[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assests/SCRIPTS/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assests/TELA HOME/tecno.jpg" type="Texture" id=2]
[ext_resource path="res://Assests/FONTE/ka1.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assests/BOTOES/Start.png" type="Texture" id=4]
[ext_resource path="res://Assests/BOTOES/Quit.png" type="Texture" id=5]
[ext_resource path="res://Assests/BOTOES/Creditos.png" type="Texture" id=6]
[ext_resource path="res://Assests/SONS/Summer_Park.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assests/SONS/jump1.ogg" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_color = Color( 0.0470588, 0.0901961, 0.960784, 1 )
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -510.172
margin_top = -273.458
margin_right = 513.828
margin_bottom = -183.458

[node name="Botoes" type="VBoxContainer" parent="CenterContainer"]
margin_left = 108.0
margin_right = 915.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="CenterContainer/Botoes"]
modulate = Color( 0.992157, 0.980392, 0.980392, 1 )
margin_right = 807.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "GAME SECURITY"

[node name="Start" type="TouchScreenButton" parent="CenterContainer/Botoes"]
position = Vector2( 1.8277, 175.145 )
scale = Vector2( 1.28372, 1.04391 )
normal = ExtResource( 4 )

[node name="Quit" type="TouchScreenButton" parent="CenterContainer/Botoes"]
position = Vector2( 2.13837, 423.089 )
scale = Vector2( 1.28372, 1.04391 )
normal = ExtResource( 5 )

[node name="Creditos" type="TouchScreenButton" parent="CenterContainer/Botoes"]
position = Vector2( 1.966, 301.565 )
scale = Vector2( 1.28372, 1.04391 )
normal = ExtResource( 6 )

[node name="SoundMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="SoundClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="CenterContainer/Botoes/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/Botoes/Quit" to="." method="_on_Quit_pressed"]
